  buttons in another (this to help take advantage of CSS frameworks that offer facilites to separate body and
  footer in modales)
- introduce Bootstrap 5 HtmlFormHelper
- introduce direct support in BeanMasterTableViewBase for links to a detail view: removes the need for repetitive
  overloading of the getEditCell() function
- add 'sortOnHeaderClick' boolean to master table to toggle on and off the sorting of table lines when the user
  click on a column header (on by default); allows to disable this on some table with drag'n drop item_order
  rearrangement
- create LocalLabelCache, to cache labels in the context of multilingual master tables: for large tables this allows
  a considerable reduction of the number of queries run against the database, especially if safe labels are used;
  the number of queries can go from thousands to barely a dozen
- add new parameter 'extraFormRequestParameters' to beanmaker2.js, that is a javascript array of parameters to be
  looked up in the dataset of the edit link and that will be translated into request parameters with their
  corresponding value when the web form is request; this should help a lot when extra information is required
  to initialize a new record/bean
- add function to check if a label is unique in context (specific table field)

BUG FIXES:
- bug fix for: drag and drop doesn't work for tables with an item_order linked to an other field
- bug fix for: cannot create more than one instance of Beanmaker2 javascript object on the same page
- bug fix for: null String saved as empty text instead of a SQL NULL value
- bug fix for: MoneyFormat builder doesn't work correctly as default format is leaking in all builder format
               creation; doesn't work at all if builder is used to format strings

MINOR CHANGES:
- code cleanup in master tables
- improve some exception messages
- various small improvements and fixes
- various utility functions added